<resources>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">80060c512c6aeef3f4893cd00f162d5e</string>
    <string name="FACEBOOK_APP_ID">362454457877822</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_bitcoin">14HvYHKe6joHbQjVdAPd1Ha1yXaGS2pVTW</string>
    <string name="about_bitcoin_label">Donate Bitcoin:</string>
    <string name="about_copied_to_clipboard">Copied to clipboard</string>
    <string name="about_developer_email">yalp.store.dev@gmail.com</string>
    <string name="about_developer_email_label">"Developer's email:"</string>
    <string name="about_gsf_id">Google Services Framework id:</string>
    <string name="about_intro">Mobile social network.</string>
    <string name="about_intro1">A product of Appvn Lite</string>
    <string name="about_librepay">https://liberapay.com/yeriomin/donate</string>
    <string name="about_librepay_label">Donate Liberapay:</string>
    <string name="about_logged_in">You are logged in as:</string>
    <string name="about_this_app">About this app</string>
    <string name="about_website">https://github.com/yeriomin/YalpStore</string>
    <string name="about_website_label">Website:</string>
    <string name="accept">Accept</string>
    <string name="action_about">About</string>
    <string name="action_bug_report">Report an issue</string>
    <string name="action_categories">Categories</string>
    <string name="action_collection">Collections</string>
    <string name="action_download">Download</string>
    <string name="action_download_appvn">Download Appvn Lite</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_apps_with_ads">Apps with ads</string>
    <string name="action_filter_category">Category: %1$s</string>
    <string name="action_filter_downloads">Downloads: %1$s</string>
    <string name="action_filter_gsf_dependent_apps">Apps using GSF</string>
    <string name="action_filter_paid_apps">Paid apps</string>
    <string name="action_filter_rating">Rating: %1$s</string>
    <string name="action_filter_system_apps">System apps</string>
    <string name="action_get_local_apk">Get local apk</string>
    <string name="action_ignore">Ignore updates</string>
    <string name="action_ignore_this">Ignore this update</string>
    <string name="action_logout">Logout</string>
    <string name="action_make_normal">Convert to normal app</string>
    <string name="action_make_system">Convert to system app</string>
    <string name="action_manual">Manual download</string>
    <string name="action_open">Open</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_topchart">Top Chart</string>
    <string name="action_updates">Updates</string>
    <string name="action_whitelist">Whitelist for updates</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="action_wishlist_add">Add to wishlist</string>
    <string name="action_wishlist_remove">Remove from wishlist</string>
    <string name="activity_title_search">Searching: \"%1$s\"</string>
    <string name="activity_title_updates_and_other_apps">Your apps</string>
    <string name="activity_title_updates_only">Updates</string>
    <string name="add_favorite">Favorite added!</string>
    <string name="adincube_key">d26a3cb8a85e499c931f</string>
    <string name="ak_login_protocol_scheme">ak2614845235198845</string>
    <string name="aphim">Aphim</string>
    <string name="app_download">Top download</string>
    <string name="app_featured">Featured</string>
    <string name="app_hot">Top hot</string>
    <string name="app_name">Appvn</string>
    <string name="app_new">Top new</string>
    <string name="app_not_exist">Application not exist!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_by">Apps by %1$s</string>
    <string name="availability_restriction_carrier">"This item isn't available on your carrier."</string>
    <string name="availability_restriction_country">"This item isn't available in your country."</string>
    <string name="biz">Biz co-operation:</string>
    <string name="biz_email">biz@appvn.com</string>
    <string name="change_language">Change language</string>
    <string name="contact">Contact</string>
    <string name="cs_email">hotro@appvn.com</string>
    <string name="cus_support">Customer Support:</string>
    <string name="details_download">Download</string>
    <string name="details_review_dialog_fields_optional">You can leave everything blank.</string>
    <string name="details_review_dialog_review_comment_hint">comment here</string>
    <string name="details_review_dialog_review_title_hint">title here</string>
    <string name="details_uninstall">Uninstall</string>
    <string name="download_manager">Download manager</string>
    <string name="flagging_title">Flag as inappropriate</string>
    <string name="for_ad">Advertising:</string>
    <string name="home">Home</string>
    <string name="hotline">Hotline:</string>
    <string name="hotline_bumber">0485898335</string>
    <string name="license">Social licensed: No.62/GXN-TTDT</string>
    <string name="marketing_email">marketing@appvn.com</string>
    <string name="pref_auto_install">Install apps immediately</string>
    <string name="pref_auto_install_summary_off">Apps are installed when the user touches the completion notification</string>
    <string name="pref_auto_install_summary_on">Apps are installed as soon as the download completes</string>
    <string name="pref_auto_whitelist">Auto whitelist</string>
    <string name="pref_auto_whitelist_summary_off">You need to whitelist apps manually</string>
    <string name="pref_auto_whitelist_summary_on">Apps installed by Appvn Lite are automatically whitelisted</string>
    <string name="pref_background_update_download">Also download the updates</string>
    <string name="pref_background_update_download_summary_off">You only get a notification</string>
    <string name="pref_background_update_download_summary_on">Updates are downloaded if found</string>
    <string name="pref_background_update_install">Also install the updates (root)</string>
    <string name="pref_background_update_install_summary_off">You only get a notification</string>
    <string name="pref_background_update_install_summary_on">Updates are installed if found (root)</string>
    <string name="pref_background_update_interval">Check for updates periodically</string>
    <string name="pref_background_update_wifi_only">On Wi-Fi only</string>
    <string name="pref_category_installation">Installation</string>
    <string name="pref_category_proxy">Proxy</string>
    <string name="pref_category_spoofing">Spoofing</string>
    <string name="pref_category_third_party">Third party services</string>
    <string name="pref_category_ui">User Interface</string>
    <string name="pref_category_updates">Updates</string>
    <string name="pref_delete_apk_after_install">Delete .apk after installation</string>
    <string name="pref_delete_apk_after_install_summary_off">Now .apks are not deleted after installation</string>
    <string name="pref_delete_apk_after_install_summary_on">Now .apks are deleted after installation</string>
    <string name="pref_device_to_pretend_to_be">Pretend to be a different device</string>
    <string name="pref_download_deltas">Delta updates</string>
    <string name="pref_download_deltas_summary_off">Full apk is downloaded every time</string>
    <string name="pref_download_deltas_summary_on">Only changes are downloaded during updates</string>
    <string name="pref_download_directory">Download directory</string>
    <string name="pref_download_internal_storage">Download to internal storage</string>
    <string name="pref_download_internal_storage_summary_off">Apks are downloaded to the external storage path provided below</string>
    <string name="pref_download_internal_storage_summary_on">More secure, but the apks are not user accessible</string>
    <string name="pref_exodus">Exodus Privacy check</string>
    <string name="pref_exodus_summary_off">Exodus report link is displayed</string>
    <string name="pref_exodus_summary_on">Tracker count is displayed on details page automatically</string>
    <string name="pref_installation_method">Installation method</string>
    <string name="pref_no_images">Download images on Wi-Fi only</string>
    <string name="pref_no_images_summary_off">Images are always downloaded now</string>
    <string name="pref_no_images_summary_on">Images are downloaded on Wi-Fi only</string>
    <string name="pref_proxy_enable">Enable proxy</string>
    <string name="pref_proxy_host">Proxy host</string>
    <string name="pref_proxy_port">Proxy port</string>
    <string name="pref_proxy_type">Proxy type</string>
    <string name="pref_requested_language">Play Store requests language</string>
    <string name="pref_update_list_black">Change apps black list</string>
    <string name="pref_update_list_white_or_black">Black or white list of apps for update</string>
    <string name="pref_use_tor">Use Tor</string>
    <string name="pref_use_tor_summary">Force download traffic through Tor for increased privacy. Requires Orbot</string>
</resources>