<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_download_internal_storage" android:key="PREFERENCE_DOWNLOAD_INTERNAL_STORAGE" android:defaultValue="false" android:summaryOn="@string/pref_download_internal_storage_summary_on" android:summaryOff="@string/pref_download_internal_storage_summary_off" android:disableDependentsState="true" />
    <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/pref_download_directory" android:key="PREFERENCE_DOWNLOAD_DIRECTORY" android:dependency="PREFERENCE_DOWNLOAD_INTERNAL_STORAGE" android:defaultValue="Appvn" />
    <PreferenceCategory android:title="@string/pref_category_updates">
        <CheckBoxPreference android:title="@string/pref_download_deltas" android:key="PREFERENCE_DOWNLOAD_DELTAS" android:defaultValue="false" android:summaryOn="@string/pref_download_deltas_summary_on" android:summaryOff="@string/pref_download_deltas_summary_off" />
        <ListPreference android:entries="@array/updateIntervalLabels" android:title="@string/pref_background_update_interval" android:key="PREFERENCE_BACKGROUND_UPDATE_INTERVAL" android:defaultValue="-1" android:entryValues="@array/updateIntervalValues" />
        <CheckBoxPreference android:title="@string/pref_background_update_download" android:key="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD" android:defaultValue="false" android:summaryOn="@string/pref_background_update_download_summary_on" android:summaryOff="@string/pref_background_update_download_summary_off" />
        <CheckBoxPreference android:title="@string/pref_background_update_wifi_only" android:key="PREFERENCE_BACKGROUND_UPDATE_WIFI_ONLY" android:dependency="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_background_update_install" android:key="PREFERENCE_BACKGROUND_UPDATE_INSTALL" android:dependency="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD" android:defaultValue="false" android:summaryOn="@string/pref_background_update_install_summary_on" android:summaryOff="@string/pref_background_update_install_summary_off" />
        <ListPreference android:entries="@array/enOrviLabel" android:title="@string/change_language" android:key="PREFERENCE_UPDATE_LOCALE" android:defaultValue="VI" android:entryValues="@array/enOrviValue" />
        <ListPreference android:entries="@array/blackOrWhiteLabels" android:title="@string/pref_update_list_white_or_black" android:key="PREFERENCE_UPDATE_LIST_WHITE_OR_BLACK" android:defaultValue="black" android:entryValues="@array/blackOrWhiteValues" />
        <CheckBoxPreference android:enabled="false" android:title="@string/pref_auto_whitelist" android:key="PREFERENCE_AUTO_WHITELIST" android:defaultValue="false" android:summaryOn="@string/pref_auto_whitelist_summary_on" android:summaryOff="@string/pref_auto_whitelist_summary_off" />
        <android.preference.MultiSelectListPreference android:persistent="true" android:title="@string/pref_update_list_black" android:key="PREFERENCE_UPDATE_LIST" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_installation">
        <CheckBoxPreference android:title="@string/pref_auto_install" android:key="PREFERENCE_AUTO_INSTALL" android:dependency="PREFERENCE_DOWNLOAD_INTERNAL_STORAGE" android:defaultValue="false" android:summaryOn="@string/pref_auto_install_summary_on" android:summaryOff="@string/pref_auto_install_summary_off" />
        <CheckBoxPreference android:title="@string/pref_delete_apk_after_install" android:key="PREFERENCE_DELETE_APK_AFTER_INSTALL" android:dependency="PREFERENCE_DOWNLOAD_INTERNAL_STORAGE" android:defaultValue="true" android:summaryOn="@string/pref_delete_apk_after_install_summary_on" android:summaryOff="@string/pref_delete_apk_after_install_summary_off" />
        <ListPreference android:entries="@array/installationMethodLabels" android:title="@string/pref_installation_method" android:key="PREFERENCE_INSTALLATION_METHOD" android:entryValues="@array/installationMethodValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_spoofing">
        <ListPreference android:title="@string/pref_requested_language" android:key="PREFERENCE_REQUESTED_LANGUAGE" />
        <ListPreference android:title="@string/pref_device_to_pretend_to_be" android:key="PREFERENCE_DEVICE_TO_PRETEND_TO_BE" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_proxy">
        <CheckBoxPreference android:title="@string/pref_use_tor" android:key="PREFERENCE_USE_TOR" android:summary="@string/pref_use_tor_summary" android:defaultValue="false" android:disableDependentsState="true" />
        <CheckBoxPreference android:title="@string/pref_proxy_enable" android:key="PREFERENCE_ENABLE_PROXY" android:dependency="PREFERENCE_USE_TOR" android:defaultValue="false" />
        <ListPreference android:entries="@array/proxyTypeValues" android:title="@string/pref_proxy_type" android:key="PREFERENCE_PROXY_TYPE" android:dependency="PREFERENCE_ENABLE_PROXY" android:defaultValue="HTTP" android:entryValues="@array/proxyTypeValues" />
        <EditTextPreference android:title="@string/pref_proxy_host" android:key="PREFERENCE_PROXY_HOST" android:dependency="PREFERENCE_ENABLE_PROXY" android:defaultValue="127.0.0.1" />
        <EditTextPreference android:title="@string/pref_proxy_port" android:key="PREFERENCE_PROXY_PORT" android:dependency="PREFERENCE_ENABLE_PROXY" android:defaultValue="8118" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_ui">
        <CheckBoxPreference android:title="@string/pref_no_images" android:key="PREFERENCE_NO_IMAGES" android:defaultValue="false" android:summaryOn="@string/pref_no_images_summary_on" android:summaryOff="@string/pref_no_images_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_third_party">
        <CheckBoxPreference android:title="@string/pref_exodus" android:key="PREFERENCE_EXODUS" android:defaultValue="false" android:summaryOn="@string/pref_exodus_summary_on" android:summaryOff="@string/pref_exodus_summary_off" />
    </PreferenceCategory>
</PreferenceScreen>