<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_download" android:visible="false" android:title="@string/details_download" />
    <item android:id="@id/action_uninstall" android:visible="false" android:title="@string/details_uninstall" />
    <item android:id="@id/action_wishlist_add" android:visible="false" android:title="@string/action_wishlist_add" />
    <item android:id="@id/action_wishlist_remove" android:visible="false" android:title="@string/action_wishlist_remove" />
    <item android:id="@id/action_download_appvn" android:visible="false" android:title="@string/action_download" />
    <item android:id="@id/action_ignore" android:visible="false" android:title="@string/action_ignore" android:checkable="true" />
    <item android:id="@id/action_whitelist" android:visible="false" android:title="@string/action_whitelist" android:checkable="true" />
    <item android:id="@id/action_ignore_this" android:visible="false" android:title="@string/action_ignore_this" android:checkable="true" />
    <item android:id="@id/action_manual" android:title="@string/action_manual" />
    <item android:id="@id/action_get_local_apk" android:visible="false" android:title="@string/action_get_local_apk" />
    <item android:id="@id/action_make_system" android:visible="false" android:title="@string/action_make_system" />
    <item android:id="@id/action_make_normal" android:visible="false" android:title="@string/action_make_normal" />
    <item android:id="@id/action_flag" android:visible="false" android:title="@string/flagging_title" />
</menu>