<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_black_24dp" android:id="@id/action_search" android:visible="false" android:title="@string/action_search" app:actionLayout="@layout/search_view_layout" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="collapseActionView|ifRoom" />
    <item android:icon="@drawable/ic_filter" android:id="@id/action_filter" android:visible="false" android:title="@string/action_filter" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/filter_system_apps" android:visible="false" android:title="@string/action_filter_system_apps" android:checkable="true" />
            <item android:id="@id/filter_apps_with_ads" android:visible="false" android:title="@string/action_filter_apps_with_ads" android:checkable="true" />
            <item android:id="@id/filter_paid_apps" android:visible="false" android:title="@string/action_filter_paid_apps" android:checkable="true" />
            <item android:id="@id/filter_gsf_dependent_apps" android:visible="false" android:title="@string/action_filter_gsf_dependent_apps" android:checkable="true" />
            <item android:id="@id/filter_category" android:visible="false" android:title="@string/action_filter_category" />
            <item android:id="@id/filter_rating" android:visible="false" android:title="@string/action_filter_rating" />
            <item android:id="@id/filter_downloads" android:visible="false" android:title="@string/action_filter_downloads" />
        </menu>
    </item>
    <item android:id="@id/action_wishlist_add" android:visible="false" android:title="@string/action_wishlist_add" />
    <item android:id="@id/action_wishlist_remove" android:visible="false" android:title="@string/action_wishlist_remove" />
    <item android:id="@id/action_ignore" android:visible="false" android:title="@string/action_ignore" android:checkable="true" />
    <item android:id="@id/action_whitelist" android:visible="false" android:title="@string/action_whitelist" android:checkable="true" />
    <item android:id="@id/action_ignore_this" android:visible="false" android:title="@string/action_ignore_this" android:checkable="true" />
    <item android:id="@id/action_manual" android:visible="false" android:title="@string/action_manual" />
    <item android:id="@id/action_get_local_apk" android:visible="false" android:title="@string/action_get_local_apk" />
    <item android:id="@id/action_make_system" android:visible="false" android:title="@string/action_make_system" />
    <item android:id="@id/action_make_normal" android:visible="false" android:title="@string/action_make_normal" />
    <item android:id="@id/action_flag" android:visible="false" android:title="@string/flagging_title" />
</menu>