<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/navigation">
        <item android:icon="@drawable/ic_home_black_24dp" android:id="@id/action_home" android:visible="false" android:title="@string/home" />
        <item android:icon="@drawable/ic_apps" android:id="@id/action_installed_apps" android:title="@string/activity_title_updates_and_other_apps" />
        <item android:icon="@drawable/ic_refresh" android:id="@id/action_updates" android:title="@string/action_updates" />
        <item android:icon="@drawable/ic_categories" android:id="@id/action_categories" android:title="@string/action_categories" />
        <item android:icon="@drawable/ic_wishlist_tick" android:id="@id/action_wishlist" android:title="@string/action_wishlist" />
        <item android:icon="@drawable/ic_download_black" android:id="@id/action_download_manager" android:title="@string/download_manager" />
    </group>
    <item android:icon="@drawable/ic_settings" android:id="@id/action_settings" android:title="@string/action_settings" />
    <item android:icon="@drawable/ic_bug_report" android:id="@id/action_bug_report" android:visible="false" android:title="@string/action_bug_report" />
    <item android:icon="@drawable/ic_about" android:id="@id/action_about" android:title="@string/action_about" />
    <item android:icon="@drawable/ic_logout" android:id="@id/action_logout" android:visible="false" android:title="@string/action_logout" />
</menu>