<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
        <TextView android:textSize="18.0sp" android:id="@id/version" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="6.0dip" android:paddingEnd="6.0dip" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_developer_email_label" />
    <TextView android:textSize="18.0sp" android:textColor="#ff5555ff" android:id="@id/developer_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_developer_email" />
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_website_label" />
    <TextView android:textSize="18.0sp" android:textColor="#ff5555ff" android:id="@id/website" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_website" />
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_librepay_label" />
    <TextView android:textSize="18.0sp" android:textColor="#ff5555ff" android:id="@id/librepay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_librepay" />
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_bitcoin_label" />
    <TextView android:textSize="14.0sp" android:textColor="#ff5555ff" android:id="@id/bitcoin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_bitcoin" />
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_logged_in" />
    <TextView android:textSize="18.0sp" android:id="@id/user_email" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="18.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_gsf_id" />
    <TextView android:textSize="18.0sp" android:id="@id/gsf_id" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>