<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:minWidth="300.0dip" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/about_logo" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="@dimen/margin_parent_large" android:src="@mipmap/ic_launcher" android:layout_centerHorizontal="true" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/about_logo" android:layout_centerHorizontal="true" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/intro1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/about_intro" android:singleLine="true" android:layout_below="@id/about_version" android:layout_centerHorizontal="true" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/intro2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_intro1" android:singleLine="true" android:layout_below="@id/intro1" android:layout_centerHorizontal="true" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@id/txt_contact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:text="@string/contact" android:singleLine="true" android:layout_below="@id/intro2" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/txt_hotline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/hotline" android:singleLine="true" android:layout_below="@id/txt_contact" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:autoLink="phone" android:id="@id/hotline_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/hotline_bumber" android:singleLine="true" android:layout_toRightOf="@id/txt_hotline" android:layout_alignBottom="@id/txt_hotline" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/txt_cus_support" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/cus_support" android:singleLine="true" android:layout_below="@id/txt_hotline" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:autoLink="email" android:id="@id/cus_email" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/cs_email" android:singleLine="true" android:layout_toRightOf="@id/txt_cus_support" android:layout_alignBottom="@id/txt_cus_support" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/txt_biz" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/biz" android:singleLine="true" android:layout_below="@id/txt_cus_support" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:autoLink="email" android:id="@id/bizz_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/biz_email" android:singleLine="true" android:layout_toRightOf="@id/txt_biz" android:layout_alignBottom="@id/txt_biz" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/txt_ad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/for_ad" android:singleLine="true" android:layout_below="@id/txt_biz" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:autoLink="email" android:id="@id/mk_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/marketing_email" android:singleLine="true" android:layout_toRightOf="@id/txt_ad" android:layout_alignBottom="@id/txt_ad" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_marginBottom="4.0dip" android:text="@string/license" android:singleLine="true" android:layout_below="@id/mk_email" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
    <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="right" android:id="@id/btn_okay" android:background="@drawable/ss_btn_white_selector" android:paddingLeft="@dimen/margin_parent" android:paddingTop="@dimen/margin_component" android:paddingRight="@dimen/margin_parent" android:paddingBottom="@dimen/margin_component" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="@dimen/margin_component" android:layout_marginRight="@dimen/margin_parent_large" android:layout_marginBottom="@dimen/margin_parent_large" android:minWidth="64.0dip" android:text="@android:string/ok" />
</LinearLayout>