<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/details_review_dialog_fields_optional" />
    <EditText android:id="@id/review_dialog_review_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/details_review_dialog_review_title_hint" android:lines="1" android:inputType="textCapSentences" />
    <EditText android:id="@id/review_dialog_review_comment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/details_review_dialog_review_comment_hint" android:maxLines="8" android:inputType="textCapSentences|textMultiLine" />
</LinearLayout>